banking-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: banking-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: banking-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
