banking-chart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: banking-policy
spec:
  podSelector:
    matchLabels:
      app: banking-backend

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: banking-frontend

    ports:
    - protocol: TCP
      port: 8080
